search API included with product
	search in product with searchText query params in products
