# src/product/product-routes.js
@@ -6,11 +6,13 @@ import {
   update,
   selectProduct,
   selectCategories,
+  searchProduct,
 } from "./product-handlers.js";
 import {
   idSchema,
   paginationSchema,
   productSchema,
+  searchSchema,
 } from "./../common/validationSchemas.js";
 import { validateSchema } from "../middleware/validate.js";
 
@@ -18,6 +20,7 @@ export const productRouter = Router();
 
 productRouter
   .get("/category/", selectCategories)
+  .get("/search/", validateSchema.query(searchSchema), searchProduct)
   .post("/", [validateSchema.body(productSchema)], add)
   .delete("/:id", validateSchema.params(idSchema), remove)
   .put(
